add prog sub to weathersetting and dayreport

--- a/clsDayReport.cls
+++ b/clsDayReport.cls
@@ -43,7 +43,7 @@ Dim coll As New Collection
 
 With ThisWorkbook.Sheets("日報資料庫")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 2 To lr
 
@@ -163,6 +163,8 @@ Dim recObj As New clsRecord
 
 '===== basic information=======
 
+ThisWorkbook.Activate
+
 With Sheets("日報第一聯")
 
 .Range("B2") = recCode
@@ -178,7 +180,7 @@ End With
 For i = 1 To 2 '施工工項、材料管理
 
 Set coll_item = getUsedItemByDate(recCode, recDate, i)
-Call checkReportCount(coll_item.count, i)
+Call checkReportCount(coll_item.Count, i)
 Call KeyInItem(coll_item, recDate, recCode, i)
 
 Next
@@ -188,7 +190,7 @@ Next
 Set coll_L = getUsedItemByDate(recCode, recDate, 3)
 Set coll_E = getUsedItemByDate(recCode, recDate, 4)
 
-Call checkReportCount(WorksheetFunction.Max(coll_L.count, coll_E.count), 3)
+Call checkReportCount(WorksheetFunction.Max(coll_L.Count, coll_E.Count), 3)
 Call KeyInItem_Merge(coll_L, coll_E, recDate, recCode, 3)
 
 '=====5-文件============
@@ -223,7 +225,7 @@ With Sheets(dataObj.getDB_name(5))
     Set rng = .Columns("A").Find(recCode)
     
     sr = rng.Row
-    lr = .Cells(.Rows.count, 1).End(xlUp).Row
+    lr = .Cells(.Rows.Count, 1).End(xlUp).Row
     
     For r = sr To lr
     
@@ -286,6 +288,8 @@ End Sub
 
 Sub KeyInItem(ByVal coll_item, ByVal recDate As Date, ByVal recCode As String, ByVal mode As Byte) ', ByVal recLoc As String)
 
+Dim o As New clsPCCES
+
 With Sheets("日報第一聯")
 
 Call getReportSrEr(sr, er, mode) '取得起始列、終點列
@@ -303,6 +307,13 @@ For Each it In coll_item
     .Range("F" & r) = getAmountByItem(it, mode)
     .Range("H" & r) = getUsedAmountByItem(it, recCode, mode)
     .Range("J" & r) = getSumAmountByItem(it, recDate, mode)
+    
+    If mode = 1 Then
+    price = o.getMoneyByItemKey(it)
+    amount = .Range("H" & r)
+    use_money = use_money + price * amount
+
+    End If
 
     .Range("A" & r).WrapText = False
     .Range("A" & r).ShrinkToFit = True
@@ -310,6 +321,13 @@ For Each it In coll_item
     r = r + 1
     
 Next
+
+If mode = 1 Then
+
+    progress = use_money / o.getSumMoney
+    .Range("K7") = progress
+
+End If
 
 End With
 
@@ -319,7 +337,7 @@ Function getSumAmountByItem(ByVal recItem As String, ByVal recDate As Date, ByVa
 
 With Sheets(dataObj.getDB_name(mode))
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 2 To lr
 
@@ -349,7 +367,7 @@ Function getUsedAmountByItemWithDate(ByVal recItem As String, ByVal recDate As D
 
 With Sheets(dataObj.getDB_name(mode))
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 2 To lr
 
@@ -380,7 +398,7 @@ Function getUsedAmountByItem(ByVal recItem As String, ByVal recCode As String, B
 
 With Sheets(dataObj.getDB_name(mode))
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 2 To lr
 
@@ -528,7 +546,7 @@ Dim coll_item As New Collection
 
 With ThisWorkbook.Sheets(dataObj.getDB_name(mode)) '"日報資料庫")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
     For r = 2 To lr
     
@@ -648,7 +666,7 @@ End If
 '
 'Next
 
-Call checkRows(coll.count)
+Call checkRows(coll.Count)
 
 With Sheets("日報第二聯")
 
