--- a/clsLongReport.cls
+++ b/clsLongReport.cls
@@ -22,7 +22,7 @@ Dim coll As New Collection
 
 With Sheets("長表格式")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 4 To lr
 
@@ -61,7 +61,7 @@ Sub getReportItemByPCCES()
 
 With Sheets("契約詳細表")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 rr = 4
 For r = 2 To lr
 
@@ -97,7 +97,7 @@ Sub getReportItemByMLE(ByVal targetMode As String)
 
 With Sheets("工料設定")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 rr = 4
 
 For r = 2 To lr
@@ -186,7 +186,7 @@ shtName = writeObj.getDB_name(print_mode)
 
 With Sheets(shtName) '"日報資料庫")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
 
 For r = 2 To lr
 
@@ -215,8 +215,8 @@ Sub SumReportAmount() '長表
 
 With Sheets("長表格式")
 
-lr = .Cells(.Rows.count, 1).End(xlUp).Row
-lc = .Cells(1, .Columns.count).End(xlToLeft).Column
+lr = .Cells(.Rows.Count, 1).End(xlUp).Row
+lc = .Cells(1, .Columns.Count).End(xlToLeft).Column
 
 For r = 4 To lr
 
@@ -249,7 +249,7 @@ sht.Name = "第" & cnt & "估驗"
 sht.Range("B1") = "(自費)第" & cnt & "次估驗"
 
 Application.DisplayAlerts = False
-If wb.Sheets.count > 1 Then wb.Sheets("工作表1").Delete
+If wb.Sheets.Count > 1 Then wb.Sheets("工作表1").Delete
 Application.DisplayAlerts = True
 
 End Sub
