--- a/clsFunction.cls
+++ b/clsFunction.cls
@@ -34,9 +34,9 @@ Function tranDate(ByVal mydatestr) As Date
 
 Y = mid(mydatestr, 1, 3)
 m = mid(mydatestr, 4, 2)
-d = mid(mydatestr, 6, 2)
+D = mid(mydatestr, 6, 2)
 
-tranDate = CDate(1911 + Y & "/" & m & "/" & d)
+tranDate = CDate(1911 + Y & "/" & m & "/" & D)
 
 End Function
 
