--- a/clsFunction.cls
+++ b/clsFunction.cls
@@ -33,10 +33,10 @@ End Sub
 Function tranDate(ByVal mydatestr) As Date
 
 Y = mid(mydatestr, 1, 3)
-m = mid(mydatestr, 4, 2)
-D = mid(mydatestr, 6, 2)
+M = mid(mydatestr, 4, 2)
+d = mid(mydatestr, 6, 2)
 
-tranDate = CDate(1911 + Y & "/" & m & "/" & D)
+tranDate = CDate(1911 + Y & "/" & M & "/" & d)
 
 End Function
 
