detect clsDayReport empty row is zero not empty and fix hidecmd and showcmd by on error resume next

--- a/clsDayReport.cls
+++ b/clsDayReport.cls
@@ -146,7 +146,7 @@ For i = 1 To 2
         
         .Rows(r).Hidden = False
         
-        If .Cells(r, "H") = "" Then .Rows(r).Hidden = True
+        If .Cells(r, "H") = 0 Then .Rows(r).Hidden = True
     
     Next
 
